Fixes h3 spacing

--- a/stylesheets/blakey-style.css
+++ b/stylesheets/blakey-style.css
@@ -51,7 +51,8 @@ h2 {
 
 h3 {
   font-size: 1.5em;
-  margin-bottom: 0.5em;
+  line-height: 2;
+  margin-bottom: 1em;
 }
 
 #images {
